# moq-multicam

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.dev  LICENSE-APACHE  LICENSE-MIT  README.md  compose.dev.yml  demo-throttle.sh  docker-compose.yml  setup-auth.sh
.github/workflows/: ci.yml
crates/moq-multicam-bridge/: Cargo.toml
crates/moq-multicam-bridge/src/: ffmpeg_source.rs  file_source.rs  gstreamer_source.rs  lib.rs  openh264_source.rs  source.rs  test_source.rs  v4l_source.rs
crates/moq-multicam-cli/: Cargo.toml
crates/moq-multicam-cli/src/: main.rs  publish.rs  publish_fmp4.rs  subscribe.rs
crates/moq-multicam-core/: Cargo.toml
crates/moq-multicam-core/src/: camera.rs  lib.rs  moq.rs  track.rs
crates/moq-multicam-relay/: Cargo.toml
docs/: architecture.md  authentication.md
examples/: README.md
examples/minimal-pubsub/: Cargo.toml
examples/minimal-pubsub/src/: main.rs
examples/multicam-test-source/: Cargo.toml
examples/multicam-test-source/src/: main.rs
examples/quic-publish/: Cargo.toml
examples/quic-publish/src/: main.rs
examples/quic-subscribe/: Cargo.toml
examples/quic-subscribe/src/: main.rs
scripts/gen-token/: Cargo.toml
scripts/gen-token/src/: main.rs
web/: index.html  package-lock.json  package.json
