[workspace]
members = ["crates/*", "examples/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
repository = "https://github.com/metapox/moq-multicam"

[workspace.dependencies]
moq-lite = "0.15"
moq-native = { version = "0.13", default-features = false, features = ["quinn", "aws-lc-rs"] }
moq-mux = "0.3"
hang = "0.15"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }

# GStreamer (optional, behind feature flag)
gstreamer = "0.23"
gstreamer-app = "0.23"

# OpenH264 (optional, behind feature flag)
openh264 = "0.4"

# V4L2 camera capture (optional, Linux only)
v4l = "0.14"
