[workspace]
members = ["crates/*", "examples/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
repository = "https://github.com/metapox/moq-multicam"

[workspace.dependencies]
moq-lite = { path = "../moq-fork/rs/moq-lite" }
moq-native = { path = "../moq-fork/rs/moq-native", default-features = false, features = ["quinn", "aws-lc-rs"] }
moq-mux = { path = "../moq-fork/rs/moq-mux" }
hang = { path = "../moq-fork/rs/hang" }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }

# GStreamer (optional, behind feature flag)
gstreamer = "0.23"
gstreamer-app = "0.23"

# OpenH264 (optional, behind feature flag)
openh264 = "0.4"

# V4L2 camera capture (optional, Linux only)
v4l = "0.14"
