[package]
name = "moq-multicam-bridge"
description = "Video source to MoQ publisher bridge"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
moq-multicam-core = { path = "../moq-multicam-core" }
moq-lite = { workspace = true }
moq-mux = { workspace = true }
hang = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
bytes = "1"

[dependencies.gstreamer]
workspace = true
optional = true

[dependencies.gstreamer-app]
workspace = true
optional = true

[dependencies.openh264]
workspace = true
optional = true

[dependencies.v4l]
workspace = true
optional = true

[features]
default = []
gstreamer = ["dep:gstreamer", "dep:gstreamer-app"]
openh264 = ["dep:openh264"]
v4l = ["dep:v4l", "dep:openh264"]
