[package]
name = "moq-multicam-relay"
description = "Relay server with multi-camera features"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
moq-multicam-core = { path = "../moq-multicam-core" }
moq-lite = { workspace = true }
moq-native = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
