[package]
name = "quic-publish"
version = "0.0.0"
edition.workspace = true
publish = false

[dependencies]
moq-multicam-core = { path = "../../crates/moq-multicam-core" }
moq-multicam-bridge = { path = "../../crates/moq-multicam-bridge" }
moq-native = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
url = "2"
