[package]
name = "quic-subscribe"
version = "0.0.0"
edition.workspace = true
publish = false

[dependencies]
moq-multicam-core = { path = "../../crates/moq-multicam-core" }
moq-native = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
url = "2"
